--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "eslint": "8.45.0",
     "eslint-config-next": "13.4.12",
     "flowbite": "^1.7.0",
+    "framer-motion": "^10.15.0",
     "next": "^13.4.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
