--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "^13.4.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-headroom": "^3.2.1",
     "react-icons": "^4.10.1",
     "react-slick": "^0.29.0",
     "react-typed": "^1.2.0",
